--- a/investments.html
+++ b/investments.html
@@ -2024,7 +2024,7 @@ function renderForecastResults(results, totalInvested, avgTER, targetYear) {
     let html = `
 
 
-           
+           <div class="row">
 <div class="col-md-4">
     <div class="card border-primary">
         <div class="card-body text-center">
@@ -2049,7 +2049,7 @@ function renderForecastResults(results, totalInvested, avgTER, targetYear) {
         </div>
     </div>
 </div>
-          
+        </div>  
 
         <div class="card mb-4">
             <div class="card-header bg-primary text-white">
