--- a/investments.html
+++ b/investments.html
@@ -634,8 +634,8 @@
                 <div class="card-body">
                     <div class="mb-3">
                         <label class="form-label"><i class="fas fa-filter me-1"></i> Filtra per Investimenti</label>
-                        <select class="form-select" id="exposureFilterSelect" multiple style="height: 120px;" onchange="renderExposureAnalysis()">
-                            <option value="ALL" selected>TUTTI GLI INVESTIMENTI</option>
+                        <select class="form-select" id="exposureFilterSelect" multiple style="height: 300px;" onchange="renderExposureAnalysis()">
+                            <option value="ALL" selected><i class="fa-solid fa-list-check"></i> Seleziona tutti gli investimenti</option>
                         </select>
                         <small class="text-muted">Tieni premuto CTRL (o CMD su Mac) per selezionare più investimenti</small>
                     </div>
