--- a/investments.html
+++ b/investments.html
@@ -1358,7 +1358,7 @@ let html = `
             </div>
         </div>
         <div class="col-md-3">
-            <div class="stat-card" style="background: var(--gradient-danger);">
+            <div class="stat-card">
                 <div class="stat-value">€${totaleCommissioni.toLocaleString('it-IT', {minimumFractionDigits: 2, maximumFractionDigits: 2})}</div>
                 <div class="stat-label">Commissioni Totali</div>
             </div>
