--- a/investments.html
+++ b/investments.html
@@ -1364,11 +1364,11 @@ let html = `
             </div>
         </div>
         <div class="col-md-3">
-            <div class="stat-card">
-                <div class="stat-value">€${totaleCommissioni.toLocaleString('it-IT', {minimumFractionDigits: 2, maximumFractionDigits: 2})}</div>
-                <div class="stat-label">Commissioni Totali</div>
-            </div>
-        </div>
+    <div class="stat-card" style="background: var(--gradient-danger);">
+        <div class="stat-value">${totaleCommissioni > 0 ? '€' + totaleCommissioni.toLocaleString('it-IT', {minimumFractionDigits: 2, maximumFractionDigits: 2}) : '-'}</div>
+        <div class="stat-label">${totaleCommissioni > 0 ? 'Commissioni Totali' : 'Nessuna Commissione'}</div>
+    </div>
+</div>
         <div class="col-md-3">
             <div class="stat-card" style="background: var(--gradient-success);">
                 <div class="stat-value">${Object.keys(byNome).length}</div>
