--- a/investments.html
+++ b/investments.html
@@ -22,6 +22,10 @@
   scroll-behavior: smooth;
   scrollbar-gutter: stable both-edges;
 }
+
+		.select2-container .select2-search--inline .select2-search__field{
+    height:25px;
+}
         :root {
             --primary-color: #6366f1;
             --secondary-color: #8b5cf6;
