--- a/investments.html
+++ b/investments.html
@@ -116,6 +116,7 @@
             margin-bottom: 20px;
             box-shadow: 0 8px 24px rgba(99, 102, 241, 0.25);
             transition: transform 0.3s;
+			height:100%;
         }
         .stat-card:hover {
             transform: translateY(-4px);
